some spacing issues

--- a/src/components/Press/press.module.scss
+++ b/src/components/Press/press.module.scss
@@ -2,7 +2,7 @@
 
 .pressContainer {
   background: $light-grey;
-  margin-top: -6rem;
+  margin-top: -9rem;
   position: relative;
   z-index: 0;
 
