--- a/src/components/Products/products.module.scss
+++ b/src/components/Products/products.module.scss
@@ -30,7 +30,7 @@
 
 .productList {
   list-style: none;
-  margin: -8rem -0.7rem 0 -0.7rem;
+  margin: -5rem -0.7rem 0 -0.7rem;
   padding: 0;
   text-indent: 0;
   text-align: center;
@@ -47,7 +47,7 @@
 
 .productFeatures {
   list-style: none;
-  margin: 7rem auto 4rem auto;
+  margin: 4rem auto 2rem auto;
   padding: 2rem;
   text-indent: 0;
   columns: auto 2;
